syntax = "proto3";

import "entities/blocks.proto";
import "api/core.proto";

message GetAllBlocksResponse {
  repeated Block blocks = 1;
}

message GetPollingBlocksRequest {
  uint32 timestamp = 1;
}

message GetPollingBlocksResponse {
  repeated Block data = 1;
  PollingMetaData meta = 2;
}

message GetSingleBlockResponse {
  Block block = 1;
}
